--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "charts-official-tutorial",
+  "name": "leaflet-with-webpack",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
@@ -19,6 +19,7 @@
     "babel-loader": "^6.4.1",
     "babel-preset-es2015": "^6.24.1",
     "css-loader": "^0.28.0",
+    "file-loader": "^0.11.1",
     "jshint": "^2.9.4",
     "jshint-loader": "^0.8.4",
     "leaflet": "^1.0.3",
