--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "babel-preset-es2015": "^6.24.1",
     "css-loader": "^0.28.0",
     "file-loader": "^0.11.1",
+    "html-webpack-plugin": "^2.28.0",
     "jshint": "^2.9.4",
     "jshint-loader": "^0.8.4",
     "style-loader": "^0.16.1",
