--- a/package.json
+++ b/package.json
@@ -5,9 +5,10 @@
   "main": "index.js",
   "scripts": {
     "clean": "rm -rf dist ",
-    "build": "node_modules/.bin/webpack --config webpack.config.js",
-    "buildP": "node_modules/.bin/webpack -p --config webpack.config.js",
-    "start": "node_modules/.bin/webpack-dev-server --open",
+    "build": "node_modules/.bin/webpack --config webpack.config.dev.js",
+    "buildP": "node_modules/.bin/webpack -p --config webpack.config.prod.js",
+    "start": "node_modules/.bin/webpack-dev-server --open --config webpack.config.dev.js",
+    "startP": "node_modules/.bin/webpack-dev-server --open --config webpack.config.prod.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
@@ -23,6 +24,7 @@
     "babel-loader": "^6.4.1",
     "babel-preset-es2015": "^6.24.1",
     "css-loader": "^0.28.0",
+    "extract-text-webpack-plugin": "^2.1.0",
     "file-loader": "^0.11.1",
     "html-webpack-plugin": "^2.28.0",
     "jshint": "^2.9.4",
