--- a/package.json
+++ b/package.json
@@ -16,8 +16,7 @@
   "license": "ISC",
   "dependencies": {
     "jquery": "^3.2.1",
-    "leaflet": "^1.0.3",
-    "sidebar-v2": "^0.3.1"
+    "leaflet": "^1.0.3"
   },
   "devDependencies": {
     "babel-core": "^6.24.1",
