--- a/package.json
+++ b/package.json
@@ -15,21 +15,28 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "jquery": "^3.2.1",
+    "jquery": "^3.4.0",
     "leaflet": "^1.0.3"
   },
   "devDependencies": {
-    "babel-core": "^6.24.1",
-    "babel-loader": "^6.4.1",
-    "babel-preset-es2015": "^6.24.1",
-    "css-loader": "^0.28.0",
-    "extract-text-webpack-plugin": "^2.1.0",
-    "file-loader": "^0.11.1",
-    "html-webpack-plugin": "^2.28.0",
-    "jshint": "^2.9.4",
-    "jshint-loader": "^0.8.4",
-    "style-loader": "^0.16.1",
-    "webpack": "^2.3.3",
-    "webpack-dev-server": "^2.4.2"
+    "@babel/core": "^7.4.3",
+    "@babel/preset-env": "^7.4.3",
+    "babel-loader": "*",
+    "css-loader": "*",
+    "eslint": "^5.3.0",
+    "eslint-config-airbnb-base": "^13.1.0",
+    "eslint-import-resolver-webpack": "^0.11.1",
+    "eslint-loader": "^2.1.2",
+    "eslint-plugin-import": "^2.17.2",
+    "file-loader": "*",
+    "html-webpack-plugin": "*",
+    "mini-css-extract-plugin": "^0.6.0",
+    "optimize-css-assets-webpack-plugin": "^5.0.1",
+    "style-loader": "*",
+    "terser-webpack-plugin": "^1.2.3",
+    "webpack": "*",
+    "webpack-cli": "^3.3.1",
+    "webpack-dev-server": "*",
+    "webpack-merge": "^4.2.1"
   }
 }
