--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
     "buildP": "node_modules/.bin/webpack -p --config webpack.config.prod.js",
     "start": "node_modules/.bin/webpack-dev-server --open --config webpack.config.dev.js",
     "startP": "node_modules/.bin/webpack-dev-server --open --config webpack.config.prod.js",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "pushToGhPages": "git subtree push --prefix dist origin gh-pages"
   },
   "keywords": [],
   "author": "",
