--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -3,7 +3,7 @@
         "browser": true,
         "commonjs": true,
         "es6": true,
-        "node": true,
+        "node": true
     },
     "extends": "airbnb-base",
     "globals": {
